{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 570,
  "lineage": "ede2133e-ffa6-f74d-2399-6d69528d5fa4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vmout",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0185e010d074994be",
            "arn": "arn:aws:ec2:ap-south-1:964745870063:instance/i-091b90aca51598a41",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091b90aca51598a41",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "puttykey1234",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-050d0eee3b850ff2e",
            "private_dns": "ip-192-168-5-173.ap-south-1.compute.internal",
            "private_ip": "192.168.5.173",
            "public_dns": "ec2-13-233-174-85.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.174.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bba61117e9aa13d5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb693683c76b6e66",
            "tags": {
              "Name": "EC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0677c8e92675d6da8"
            ]
          },
          "dependencies": [
            "aws_efs_file_system.efs_task",
            "aws_efs_mount_target.efs_mount",
            "aws_internet_gateway.task-2-igw",
            "aws_route_table.route-table-igw",
            "aws_route_table_association.subnet-association",
            "aws_security_group.task-2-sg",
            "aws_subnet.terra_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "task-2-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964745870063:internet-gateway/igw-0708caae61dd20b54",
            "id": "igw-0708caae61dd20b54",
            "owner_id": "964745870063",
            "tags": {
              "Name": "My task-2 VPC Internet Gateway"
            },
            "vpc_id": "vpc-0afe69dda3f521a6d"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01e5096b4bebb7e1c",
            "owner_id": "964745870063",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0708caae61dd20b54",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table"
            },
            "vpc_id": "vpc-0afe69dda3f521a6d"
          },
          "dependencies": [
            "aws_internet_gateway.task-2-igw",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd5c62c82f80c723",
            "route_table_id": "rtb-01e5096b4bebb7e1c",
            "subnet_id": "subnet-0bb693683c76b6e66"
          },
          "dependencies": [
            "aws_internet_gateway.task-2-igw",
            "aws_route_table.route-table-igw",
            "aws_subnet.terra_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task-2-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964745870063:security-group/sg-0677c8e92675d6da8",
            "description": "Allow TLS Inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0677c8e92675d6da8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NFS from EFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "task-2-sg",
            "name_prefix": null,
            "owner_id": "964745870063",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "task-2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afe69dda3f521a6d"
          },
          "dependencies": [
            "aws_subnet.terra_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964745870063:subnet/subnet-0bb693683c76b6e66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.5.0/24",
            "id": "subnet-0bb693683c76b6e66",
            "map_public_ip_on_launch": true,
            "owner_id": "964745870063",
            "tags": {
              "Name": "terra_subnet"
            },
            "vpc_id": "vpc-0afe69dda3f521a6d"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964745870063:vpc/vpc-0afe69dda3f521a6d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0db916c6e81dc3733",
            "default_route_table_id": "rtb-0fd8efc93c416d20d",
            "default_security_group_id": "sg-007b10427f777cdca",
            "dhcp_options_id": "dopt-6c9f6407",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0afe69dda3f521a6d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fd8efc93c416d20d",
            "owner_id": "964745870063",
            "tags": {
              "Name": "terra_vpc"
            }
          }
        }
      ]
    }
  ]
}